--- a/src/components/cart/cart.style.scss
+++ b/src/components/cart/cart.style.scss
@@ -127,7 +127,7 @@ $mainColor: #BB0025;
             display: flex;
             align-items: center;
             height: 34;
-            width: 390;
+            max-width: 390;
             & > div{
                 margin-left: 8;
                 flex: 1;
