--- a/src/components/cart/cart.style.scss
+++ b/src/components/cart/cart.style.scss
@@ -148,6 +148,9 @@ $mainColor: #BB0025;
     & .mainContainer.mobile{
         display: flex;
         flex-direction: column;
+        padding-top: 0;
+        padding-left: 46px!important;
+        padding-right: 24;
         & .boxMobile{
             padding: 10px 5px;
             border-bottom: 1px solid #e5e5e5;
