--- a/src/components/cart/cart.style.scss
+++ b/src/components/cart/cart.style.scss
@@ -132,6 +132,9 @@ $mainColor: #BB0025;
         }
     }
 }
+.boxMobile_ input{
+    padding-right: 28px!important;
+}
 .boxMobile_ input, .boxMobile_ .MuiInputBase-multiline{
     padding: 10px 14px!important;
 }
