--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -371,6 +371,7 @@ body{
     display: flex;
     justify-content: center;
     background-color: #fff;
+    z-index: 1;
     & .MuiBadge-anchorOriginTopRightRectangle{
         right: -7px!important;
     }
