--- a/src/components/cart/cart.style.scss
+++ b/src/components/cart/cart.style.scss
@@ -21,12 +21,16 @@ $mainColor: #BB0025;
 .Mui-focused .MuiOutlinedInput-notchedOutline{
     border-color: $mainColor!important;
 }
+
 .orderCheckText{
     @include fons(1.2rem, $Ubuntu);
     padding-bottom: 10px;
     &.bold{
         font-weight: bold;
     }
+}
+.tableOrderCheck .orderCheckText{
+    padding-bottom: 0px;
 }
 .orderCheckTitle{
     @include fons(1.3rem, $Futuris);
@@ -118,13 +122,14 @@ $mainColor: #BB0025;
         & tr:not(:last-child){
             border-bottom: 1px solid #96969A;
         }
+        & td{
+            padding: 5px 0;
+        }
     }
     & .namePrice.orderCheckText{
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
-        padding: 0;
-        margin: 0;
         & > svg{
             padding-top: 8px;
             padding-left: 2px;
@@ -132,11 +137,23 @@ $mainColor: #BB0025;
         }
     }
 }
-.boxMobile_ input{
-    padding-right: 28px!important;
+.nameSdacha.orderCheckText{
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+    margin: 0;
+    & > svg{
+        padding-top: 8px;
+        padding-left: 2px;
+        font-size: 0.9rem;
+    }
 }
 .boxMobile_ input, .boxMobile_ .MuiInputBase-multiline{
     padding: 10px 14px!important;
+    z-index: 1;
+}
+.boxMobile_ input{
+    padding-right: 28px!important;
 }
 .boxMobile_.area .MuiInputLabel-outlined{
     transform: translate(14px, 12px) scale(1);
