--- a/src/components/actii/actii.style.scss
+++ b/src/components/actii/actii.style.scss
@@ -12,7 +12,7 @@ $Futuris: 'Futuris Bold';
     }
     & .mainContainer{
         padding-top: 0!important; 
-        padding-bottom: 50;
+        padding-bottom: 36px!important; ;
     }
     @media (min-width: 960px) {
         margin-left: 8.35% !important; 
