--- a/src/components/contact/contact.style.scss
+++ b/src/components/contact/contact.style.scss
@@ -26,7 +26,7 @@ $Futuris: 'Futuris Bold';
         text-decoration: none;
     }
     & .p20{
-        padding-bottom: 20;
+        padding-bottom: 20px;
     }
     & > div:first-child{
         text-align: center;
