--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -63,12 +63,12 @@ body{
     min-height: 100vh;
     & .header{
         background-color: #fff;
-        margin-bottom: 50;
-        height: 50;
+        margin-bottom: 50px;
+        height: 50px;
     }
     & .sub_header{
-        min-height: 50;
-        height: 50;
+        min-height: 50px;
+        height: 50px;
         display: flex;
         justify-content: space-between;
         & .thisCity{
@@ -168,7 +168,7 @@ body{
     scroll-snap-stop: always;
 }
 .scrollCat{
-    margin-top: 50; 
+    margin-top: 50px; 
     display: flex;
     flex-direction: row;
     overflow: scroll;
@@ -180,7 +180,7 @@ body{
     	display: none;
     }
     & > a:first-child{
-        margin-left: 10;
+        margin-left: 10px;
     }
     & a{
         width: max-content;
@@ -200,15 +200,15 @@ body{
 }
 #simple-popover{
     & .DescPromo{
-        width: 393;
-        padding-top: 15;
+        width: 393px;
+        padding-top: 15px;
         & span{
             @include fons(0.8rem, $Ubuntu);
         }
     }
     & .InCart{
-        width: 393; 
-        padding-top: 15; 
+        width: 393px; 
+        padding-top: 15px; 
         display: flex;
         justify-content: flex-end;
         & span{
@@ -256,15 +256,15 @@ body{
         padding: 2px 4px;
         display: flex;
         align-items: center;
-        height: 34;
-        width: 390;
+        height: 34px;
+        width: 390px;
         & > div{
-            margin-left: 8;
+            margin-left: 8px;
             flex: 1;
         }
         & hr{
-            height: 28;
-            margin: 4;
+            height: 28px;
+            margin: 4px;
         }
         & svg{
             fill: $colorMain;
@@ -305,17 +305,17 @@ body{
         flex-direction: column;
     }
     & .ModalContent_1_3{
-        margin-top: 30;
+        margin-top: 30px;
         display: flex; 
         flex-direction: column;
     }
     & .ModalLabel{
-        margin-bottom: 5;
+        margin-bottom: 5px;
         @include fons(1.1rem, $Ubuntu);
     }
     & .changeNumber{
         @include fons(0.8rem, $Ubuntu);
-        padding-top: 10; 
+        padding-top: 10px; 
         cursor: pointer;
         width: fit-content;
         color: $colorMain;
@@ -365,9 +365,9 @@ body{
 }
 .bottomNavigate{
     position: fixed;
-    bottom: 0; 
+    bottom: 0px; 
     width: 100%;
-    height: 45; 
+    height: 45px; 
     display: flex;
     justify-content: center;
     background-color: #fff;
